frontend/test/should_fail/computations_decl_use_returns_type_mismatch_005.grg
using model_init;

procedure proc(-e:Edge->) : (E1)
{
	return(e);
}

